--- a/src/Components/PostComponent/Posts.css
+++ b/src/Components/PostComponent/Posts.css
@@ -36,12 +36,210 @@
     text-decoration: solid;
     text-shadow: #ccc;
 }
+.img-content{
+    display: flex;
+    overflow: hidden;
+    animation: scrollImage 10s linear infinite;
+}
 .img-news{
     width: 470px;
     height: 370px;
+    
     border-radius: 16px;
     margin-left: -22px;
     margin-right: -22px;
     margin-top: -2px;
+
+}
+.container-post-details{
+    display: flex;
+    margin-top: 50px;
+    margin-left: 32px;
+    margin-bottom: 30px;
+    justify-content: space-between;
+
+}
+.Postal-img{
+    /* width: 100%;
+    height: 50vh; */
+    width: 60vw; /* Set each image to the viewport width */
+    height: 50vh; /* Set each image to the viewport height */
+    transition: 0.3s;
+    justify-items: stretch;
+    margin-right: 20px; 
     scroll-behavior: smooth;
 }
+.Postal-img:hover{
+    width: 100%;
+    height: 445px;
+    cursor: pointer;
+}
+@keyframes scrollImages {
+    0%, 100% {
+      transform: translateX(100%);
+    }
+    10%, 90% {
+      transform: translateX(-100%);
+    }
+    20%, 80% {
+      transform: translateX(-200%);
+    }
+    30%, 70% {
+      transform: translateX(-300%);
+    }
+    40%, 60% {
+      transform: translateX(-400%);
+    }
+    50% {
+      transform: translateX(-400%); /* Pause at 50% for 5 seconds (adjust as needed) */
+    }
+  }
+.btnArtical {
+    margin-right: 20px;
+    width: 150px;
+    height: 75px;
+    border: 1px solid orangered;
+    background-color: orangered;
+    border-radius: 10px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 1px;
+    transition: 0.3s;
+    cursor: pointer;
+    opacity: 0.9;
+}
+.btnArtical:hover{
+    opacity: 1;
+    background-color: rgb(177, 54, 9);
+    width: 200px;
+    height: 80px;
+}
+.btnArtical:focus{
+    width: 200px;
+    height: 80px;
+
+}
+.paragraph{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    width:100%;
+    letter-spacing: 1px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top:50px ;
+
+
+}
+.body{
+margin: 0;
+  padding: 0;
+   display: flex; 
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.create-posts{
+  
+      
+}
+form {
+    box-sizing: border-box;
+    border: 1px solid gray;
+    border-radius: 10px;
+    background-color: gray;
+    color: white;
+    margin-top: 50px;
+    height: 100vh;
+    width: 700px;
+    text-align: center;
+  
+      
+}
+.labelForm{
+    margin-top: 40px;
+    padding-left: 12px;
+    display: block;
+    text-align: left;
+    font-size: 20px;
+}
+.inp{
+    padding: 2px;
+    margin-top: 5px;
+    border-radius: 10px;
+    border: none;
+    height: 55px;
+    width: 600px;
+    transition: 0.3s;
+}
+.inp:hover{
+    background-color: rgb(219, 216, 216);
+    border: 1px solid rgb(46, 136, 219) ;
+    color: black;
+    cursor: pointer;
+}
+.inp:focus{
+    width:680px;
+    height:60;
+    cursor: pointer;
+    background-color:white
+}
+textarea {
+    height: 36vh;
+    width:600px;
+    margin-top: 5px;
+    margin-bottom: -15px;
+    padding: 2px;
+    font-size: 13px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    box-shadow: #ccc;
+    text-shadow: #ccc;
+    
+}
+select{
+    display: block;
+    text-align: center;
+    width: 679px;
+    height: 79px;
+    margin-top: 3px;
+    margin-left: 9px;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(165, 163, 163);
+    background-color: rgb(79, 80, 80);
+    text-align: left;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: -12px;
+}
+.option{
+    border-radius: 10px;
+    border: none;
+    background-color: white;
+}
+.btnArtical1{
+    margin-right: 20px;
+    width: 250px;
+    height: 75px;
+    border: 1px solid orangered;
+    background-color: orangered;
+    border-radius: 10px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 1px;
+    transition: 0.3s;
+    cursor: pointer;
+    opacity: 0.9;
+    margin-top: 20px;
+}
+h1{
+    font-weight: bold;
+    font-size: 33px;
+    margin-bottom: -42px;
+    margin-top: 128px;
+}
+
